; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_gimplify.c_gimplify_modify_expr_to_memcpy.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_gimplify.c_gimplify_modify_expr_to_memcpy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@implicit_built_in_decls = common dso_local global i32** null, align 8
@BUILT_IN_MEMCPY = common dso_local global i64 0, align 8
@NOP_EXPR = common dso_local global i32 0, align 4
@INDIRECT_REF = common dso_local global i32 0, align 4
@GS_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*, i32)* @gimplify_modify_expr_to_memcpy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gimplify_modify_expr_to_memcpy(i32** %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32** %0, i32*** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %12 = load i32**, i32*** %4, align 8
  %13 = load i32*, i32** %12, align 8
  %14 = call i32* @TREE_OPERAND(i32* %13, i32 0)
  store i32* %14, i32** %9, align 8
  %15 = load i32**, i32*** %4, align 8
  %16 = load i32*, i32** %15, align 8
  %17 = call i32* @TREE_OPERAND(i32* %16, i32 1)
  store i32* %17, i32** %11, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = call i32* @tree_cons(i32* null, i32* %18, i32* null)
  store i32* %19, i32** %7, align 8
  %20 = load i32*, i32** %11, align 8
  %21 = call i32* @build_fold_addr_expr(i32* %20)
  store i32* %21, i32** %8, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = call i32* @tree_cons(i32* null, i32* %22, i32* %23)
  store i32* %24, i32** %7, align 8
  %25 = load i32*, i32** %9, align 8
  %26 = call i32* @build_fold_addr_expr(i32* %25)
  store i32* %26, i32** %10, align 8
  %27 = load i32*, i32** %10, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = call i32* @tree_cons(i32* null, i32* %27, i32* %28)
  store i32* %29, i32** %7, align 8
  %30 = load i32**, i32*** @implicit_built_in_decls, align 8
  %31 = load i64, i64* @BUILT_IN_MEMCPY, align 8
  %32 = getelementptr inbounds i32*, i32** %30, i64 %31
  %33 = load i32*, i32** %32, align 8
  store i32* %33, i32** %8, align 8
  %34 = load i32*, i32** %8, align 8
  %35 = load i32*, i32** %7, align 8
  %36 = call i32* @build_function_call_expr(i32* %34, i32* %35)
  store i32* %36, i32** %8, align 8
  %37 = load i32, i32* %6, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %50

39:                                               ; preds = %3
  %40 = load i32, i32* @NOP_EXPR, align 4
  %41 = load i32*, i32** %10, align 8
  %42 = call i32 @TREE_TYPE(i32* %41)
  %43 = load i32*, i32** %8, align 8
  %44 = call i32* @build1(i32 %40, i32 %42, i32* %43)
  store i32* %44, i32** %8, align 8
  %45 = load i32, i32* @INDIRECT_REF, align 4
  %46 = load i32*, i32** %9, align 8
  %47 = call i32 @TREE_TYPE(i32* %46)
  %48 = load i32*, i32** %8, align 8
  %49 = call i32* @build1(i32 %45, i32 %47, i32* %48)
  store i32* %49, i32** %8, align 8
  br label %50

50:                                               ; preds = %39, %3
  %51 = load i32*, i32** %8, align 8
  %52 = load i32**, i32*** %4, align 8
  store i32* %51, i32** %52, align 8
  %53 = load i32, i32* @GS_OK, align 4
  ret i32 %53
}

declare dso_local i32* @TREE_OPERAND(i32*, i32) #1

declare dso_local i32* @tree_cons(i32*, i32*, i32*) #1

declare dso_local i32* @build_fold_addr_expr(i32*) #1

declare dso_local i32* @build_function_call_expr(i32*, i32*) #1

declare dso_local i32* @build1(i32, i32, i32*) #1

declare dso_local i32 @TREE_TYPE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
